--- a/ionic/fieldApp/src/pages/login/login.html
+++ b/ionic/fieldApp/src/pages/login/login.html
@@ -8,13 +8,7 @@
 
 
 <ion-content padding>
-  <form>
-    <!--
-    <ion-input type="email" name="email" [(ngModel)]="email" placeholder="Email"></ion-input>
-    <ion-input type="password" name="password" [(ngModel)]="password" placeholder="Password"></ion-input>
-    <button ion-button round block (click)="login()">Login</button>
-    -->
-    
+  <div>
     <div text-center padding>
       <a class="btn btn-block btn-social btn-google" (click)="loginWithGoogle()">
 	<span class="fa fa-google"></span> Sign in with Google
@@ -28,6 +22,40 @@
 	<span class="fa fa-twitter"></span> Sign in with Twitter
       </a>
     </div>
+  </div>
+  
+  <div text-center padding>
+    <form [formGroup]="loginForm" (submit)="login()" novalidate>
+      <ion-item>
+	<ion-label>Email</ion-label>
+	<ion-input #email formControlName="email" type="email" placeholder="Your Email"
+		   [class.invalid]="!loginForm?.controls.email.valid && loginForm?.controls.email.dirty">
+	</ion-input>
+      </ion-item>
+      <ion-item class="error-message" *ngIf="!loginForm?.controls.email.valid && loginForms?.controls.email.dirty">
+	<p>Please enter a valid Email ID</p>
+      </ion-item>
 
-  </form>
+      <ion-item text-left>
+	<ion-label>Password</ion-label>
+	<ion-input #password formControlName="password" type="password" placeholder="Your Password"
+		   [class.invalid]="!loginForm?.controls.password.valid && loginForm?.controls.password.dirty">
+	</ion-input>
+      </ion-item>
+      <ion-item class="error-message" *ngIf="!loginForm?.controls.password.valid && loginForm?.controls.password.dirty">
+	<p>Your password needs to have more than 6 characters</p>
+      </ion-item>
+
+      <button ion-button block type="submit">Login</button>
+    </form>
+
+    <button ion-button block clear (click)="resetPassword()">
+      I forgot my password 🙁
+    </button>
+
+    <button ion-button block clear (click)="createAccount()">
+      Sign Up
+    </button>
+  </div>
+  
 </ion-content>
