Updating the pages to have spinners for each load and also the panchayats sync (async FIXME)

--- a/ionic/fieldApp/src/pages/home/home.html
+++ b/ionic/fieldApp/src/pages/home/home.html
@@ -13,7 +13,7 @@
       <button ion-button [navPush]="loginPage">Login</button>
   </div>
   <div text-center padding *ngIf="getUser()">
-    <button ion-button [navPush]="panchayatsPage" [navParams]="user">
+    <button ion-button [navPush]="panchayatsPage" [navParams]="user" (click)= "presentSpinner('Loading Panchayats...')">
       Panchayats
     </button>
   </div>
