Trying to replace edit panchayats as a page. Added timestamp to updates. Cleanup for survey

--- a/ionic/fieldApp/src/pages/panchayats/panchayats.html
+++ b/ionic/fieldApp/src/pages/panchayats/panchayats.html
@@ -29,6 +29,7 @@
 
   <p>If you wish to update the panchayat list click below</p>
   <button ion-button (click)="editPanchayaList()">Edit Panchayat List</button>
+  <!-- button ion-button (click)="editPanchayatPage()">Edit Panchayat List</button -->
 
   <!-- To give padding at the bottom (FIXME) -->
   <br />
